# unicorn-binance-trailing-stop-loss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  environment.yml  example_binance_trailing_stop_loss.py  example_logging.py  meta.yaml  pyproject.toml  requirements.txt  setup.py  unittest_binance_trailing_stop_loss.py  unittest_binance_trailing_stop_loss_engine.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: build_wheels.yml  unit-tests.yml
bot/: README.md  __init__.py  code_signing_win.bat  create_win_exe.bat  create_win_exe.sh  remove_win_exe.bat  ubtsl-terminal-windows.py  ubtsl-terminal-windows2.py  ubtsl.py
bot/InnoSetup/: LICENSE  after_installation.txt  before_installation.txt  create_symlink.bat  setup-script-ubtsl-bot.iss  ubtsl_config.ini  ubtsl_profiles.ini
cli/: README.md  example_ubtsl_config.ini  example_ubtsl_profiles.ini  ubtsl  unicorn_binance_trailing_stop_loss
dev/: link_lib.sh  reset.sh  set_version_config.txt  unlink_lib.sh
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh
dev/sphinx/source/: changelog.md  cli.md  conf.py  index.rst  license.rst  modules.rst  (+1 more)
docs/: .buildinfo  BOT.html  Bot.html  CHANGELOG.html  CLI.html  CNAME  README.html  README_CLI.html  changelog.html  cli.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_binance_trailing_stop_loss.html  unicorn_binance_websocket_api.html
docs-del/: search.html  searchindex.js  unicorn_binance_trailing_stop_loss.html
docs/_modules/: index.html
docs/_sources/: Bot.md.txt  CHANGELOG.md.txt  CLI.md.txt  README.md.txt  README_CLI.md.txt  changelog.md.txt  index.rst.txt  modules.rst.txt  readme.md.txt  security.md.txt  unicorn_binance_trailing_stop_loss.rst.txt
docs/_static/: jquery-3.5.1.js  jquery.js
pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
sphinx/: create_docs.sh
sphinx/source/: BOT.md  conf.py  index.rst  unicorn_binance_trailing_stop_loss.rst
tools/binance_stop_loss/: README.md  binance_trailing_stop_loss.py  profiles.ini
unicorn_binance_trailing_stop_loss/: __init__.py  __main__.py  bot.py  cli.py  licensing_manager.py  manager.py
unicorn_binance_trailing_stop_loss_bot/: log.txt  requirements.txt  secrets.ini  ubtslb  unicorn_binance_trailing_stop_loss_bot.py
unicorn_binance_trailing_stop_loss_engine/: __init__.py  manager.py  unicorn_binance_stop_loss.py  unicorn_binance_trailing_stop_loss_engine_manager.py
(+2 files in other folders)
