[tool.poetry]
name = "unicorn-binance-trailing-stop-loss"
version = "1.0.0"
description = "A Python library with a command line interface for a trailing stop loss and smart entry on the Binance exchange. We also offer a standalone version for Windows and Mac that does not require an installed Python environment. "
authors = ["LUCIT Systems and Development <info@lucit.tech>"]
license = "LSOSL - LUCIT Synergetic Open Source License"
readme = "README.md"
homepage = "https://www.lucit.tech/unicorn-binance-trailing-stop-loss.html"
documentation = "https://unicorn-binance-trailing-stop-loss.docs.lucit.tech"
repository = "https://github.com/LUCIT-Systems-and-Development/unicorn-binance-trailing-stop-loss"

[tool.poetry.urls]
'Howto' = 'https://www.lucit.tech/unicorn-binance-trailing-stop-loss.html#howto'
'Documentation' = 'https://unicorn-binance-trailing-stop-loss.docs.lucit.tech'
'Wiki' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-binance-trailing-stop-loss/wiki'
'Author' = 'https://www.lucit.tech'
'Changes' = 'https://unicorn-binance-trailing-stop-loss.docs.lucit.tech/changelog.html'
'License' = 'https://unicorn-binance-trailing-stop-loss.docs.lucit.tech/license.html'
'Issue Tracker' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-binance-trailing-stop-loss/issues'
'Telegram' = 'https://t.me/unicorndevs'
'Chat' = 'https://app.gitter.im/#/room/#unicorn-binance-trailing-stop-loss:gitter.im'
'Get Support' = 'https://www.lucit.tech/get-support.html'
'LUCIT Online Shop' = 'https://shop.lucit.services/software/unicorn-binance-suite'

[tool.poetry.dependencies]
python = ">=3.7.0"
Cython = "*"
lucit-licensing-python = ">=1.8.1"
requests = "*"
unicorn-binance-rest-api = ">=2.1.2"
unicorn-binance-websocket-api = ">=2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
ubtsl = "unicorn_binance_trailing_stop_loss.cli:main"

[tool.poetry.package_data]
unicorn_binance_websocket_api = ["*.so", "*.dll"]
